--- a/src/pages/analytic/analytic.html
+++ b/src/pages/analytic/analytic.html
@@ -25,12 +25,12 @@
     </ion-row>
   </ion-card>
 
-  <div *ngIf="!showChart" class="emptyState">
+  <!-- <div *ngIf="!showChart" class="emptyState">
     <img src="./assets/imgs/search.svg">
     <h2 text-center>No data.</h2>
-  </div>
+  </div> -->
 
-  <div *ngIf="showChart">
+  <!-- <div *ngIf="showChart"> -->
     <ion-card>
       <ion-card-header>
         Order Summary
@@ -47,5 +47,5 @@
         <canvas #barCanvas></canvas>
       </ion-card-content>
     </ion-card>
-  </div>
+  <!-- </div> -->
 </ion-content>
