--- a/src/pages/analytic/analytic.html
+++ b/src/pages/analytic/analytic.html
@@ -47,5 +47,13 @@
         <canvas #barCanvas></canvas>
       </ion-card-content>
     </ion-card>
+    <ion-card>
+      <ion-card-header>
+        Menu-Frequency
+      </ion-card-header>
+      <ion-card-content>
+        <canvas #doughnutCanvas2></canvas>
+      </ion-card-content>
+    </ion-card>
   <!-- </div> -->
 </ion-content>
